# cards-oracle

./: .gitignore  README.md  docker-compose.yml
apps/backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  dagster_workspace.yaml  pyproject.toml
apps/backend/.dagster/: dagster.yaml
apps/backend/app/: main.py
apps/backend/app/api/: main.py
apps/backend/app/api/routes/: card_search.py  cards.py  db.py  embeddings.py  ingest.py  search.py
apps/backend/app/core/: card_search.py  chunk_mappings.py  config.py  db.py  elasticsearch.py  embeddings_jobs.py
apps/backend/app/core/embeddings/: __init__.py  normalize.py  openai.py  provider.py  sentence_transformers.py  utils.py
apps/backend/app/core/llms/: llama_cpp.py  ollama.py  provider.py  utils.py  zai.py
apps/backend/app/core/rag/: search.py
apps/backend/app/dagster/: __init__.py  definitions.py  jobs.py
apps/backend/app/data_pipeline/: create_embeddings.py  dataset_ingest_json.py  sentence_transformers.py
apps/backend/app/data_pipeline/embeddings/: create_chunks.py  generate_from_chunks.py
apps/backend/app/data_pipeline/ingestion/: json_records.py
apps/backend/app/models/: api.py  db.py  embedding.py  llm.py  scryfall.py
apps/backend/app/services/: card_indexer.py
apps/backend/docs/: rag-search.md
apps/backend/docs/prds/: prd-create-embeddings.md
apps/backend/scripts/: generate_openapi_types.py
apps/backend/tests/: conftest.py
apps/backend/tests/api/routes/: test_card_search.py  test_embeddings.py
apps/backend/tests/core/: test_chunk_mappings.py
(+92 files in other folders)
