[project]
name = "mtg-cards-oracle-backend"
version = "0.1.0"
description = "A FastAPI backend application that helps users find cards for MTG using RAG search."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-to-typescript>=2.0.0",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "sentence-transformers>=5.2.2",
    "zai-sdk>=0.2.2",
]
